# workshop-github-actions-2026-feb

./: README.md  pyproject.toml
.github/workflows/: container.yml  deploy-full-example.yml  deploy.yml  docs.yml  lint-and-format.yml  release.yml  scan.yml  test.yml  version.yml
